k8s/storage/nix-cache/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nix
  namespace: nix-cache
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-gateway
      protocol: HTTP
      port: 80
      hostname: &hostname "nix.${SECRET_DOMAIN}"
    - name: tls-gateway
      protocol: HTTPS
      port: 443
      hostname: *hostname
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nix-serve
  namespace: nix-cache
spec:
  parentRefs:
    - name: nix
  hostnames:
    - "nix.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: nix-serve
          port: 5000
